[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Assets/drone.png" type="Texture" id=1]
[ext_resource path="res://Sources/Entity/Drone/GrabDrone.gd" type="Script" id=2]
[ext_resource path="res://Resources/Assets/smoke.png" type="Texture" id=3]
[ext_resource path="res://Resources/Assets/explosion_texture.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.75, 6.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77.227, 68.1084 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.718182 ), 0.0, 0.0, 0, 0, Vector2( 0.923077, 0.518182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0123457, 0.222222, 0.975309, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.243164, 0.243164, 0.243164, 0.270588, 0, 0, 0, 0, 0, 0, 0, 0 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.00763359, 0.129771, 1 )
colors = PoolColorArray( 0.247059, 0.243137, 0.243137, 0, 0.628906, 0.592267, 0.572403, 1, 0.917969, 0.917969, 0.917969, 0 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.160305, 0.717557, 1 )
colors = PoolColorArray( 0.937255, 0.466667, 0.0509804, 0, 0.917969, 0.572022, 0.0824738, 1, 0.909804, 0.4, 0.0666667, 1, 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 78.2386, 28.0013 )

[node name="Drone" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="drone" type="Sprite" parent="."]
position = Vector2( -0.797607, 14.0558 )
scale = Vector2( 0.261116, 0.261116 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.25 )
shape = SubResource( 1 )

[node name="GrabArea" type="Area2D" parent="."]

[node name="GrabCollider" type="CollisionShape2D" parent="GrabArea"]
position = Vector2( 0, 90.7143 )
shape = SubResource( 2 )

[node name="Smoke" type="CPUParticles2D" parent="."]
z_index = -1
amount = 50
lifetime = 5.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 31.89
direction = Vector2( 1, -1 )
gravity = Vector2( 0, -10 )
initial_velocity = 20.0
angle = 720.0
angle_random = 1.0
scale_amount = 0.05
scale_amount_random = 0.1
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="ExplosionSmoke" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.203922 )
emitting = false
one_shot = true
explosiveness = 1.0
texture = ExtResource( 4 )
gravity = Vector2( 0, -20 )
angle = 360.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.3
color_ramp = SubResource( 5 )

[node name="Explosion" type="CPUParticles2D" parent="."]
position = Vector2( -1.58917, 1.05946 )
emitting = false
one_shot = true
explosiveness = 1.0
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 70 )
initial_velocity = 300.0
initial_velocity_random = 1.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.01
scale_amount_random = 0.03
color_ramp = SubResource( 6 )

[node name="CollisionShape" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape"]
shape = SubResource( 7 )
[connection signal="body_entered" from="GrabArea" to="." method="_on_GrabArea_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_GrabArea_body_exited"]
[connection signal="body_entered" from="CollisionShape" to="." method="_on_CollisionShape_body_entered"]
